During the development of the Member Arrangement feature for class types (MajorClasses, SpecializedClasses, MinorClasses), we realized that the original controller MemberArrangementController (and its variants) was taking on too many responsibilities: managing both students and lecturers, and handling complex logic such as retake, tuition payment, checking course requirements, leading to long code, difficult to maintain, and not following the Single Responsibility principle.
The 3 large controllers were split into 6 smaller controllers, each controller is responsible for only one type of member (student or lecturer) and one type of class, specifically:

MajorClasses → Split into:

StudentMemberController: Manage students in regular classes (add, delete, handle retake, check balance, deduct money).

LecturerMemberController: Manage lecturers teaching regular classes.

SpecializedClasses → Split into:
SpecializedStudentMemberController: Handles students in specialized classes, integrates StudentRequiredSpecializedSubjects and ClassesService.
SpecializedLecturerMemberController: Manages specialized class lecturers.

MinorClasses → Split into:
MinorStudentMemberController: Dedicated to DEPUTY_STAFF, checks minor subject requirements (StudentRequiredMinorSubjects), filters retake students without classes, handles payments and adds to classes.
MinorLecturerMemberController: Manages minor class lecturers.

Main improvements:

Clearer URLs: Use /member-arrangement/students and /member-arrangement/lecturers.
Separate View: Each controller returns its own template (*StudentMemberArrangement.html, *LecturerMemberArrangement.html) → easy to design tab interface.
Session currentClassId is kept common, allowing to select class once and navigate between 2 tabs.
Error handling logic (populateError) is optimized, only loading necessary data.
Strict condition checking: Student must be in the request list, have enough money, not in class → avoid data errors.
Reuse helper: getReStudyFe